# basic_huffman

./: CMakeLists.txt  README.md
include/CM/: basic_huffman.h
src/: basic_huffman.c
tests/: main.c
